# dodge_it

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  uncrustify.cfg
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  build_options.cmake  compiler_flags.cmake  options.cmake  uninstall.cmake.in  util.cmake  warnings.cmake
src/: CMakeLists.txt  main.cpp
src/game/: circle.hpp  enemy.cpp  enemy.hpp  player.cpp  player.hpp  playing_state.cpp  playing_state.hpp
src/media/: camera.cpp  camera.hpp  core.hpp  drawable.cpp  drawable.hpp  game_context.hpp  game_state.cpp  game_state.hpp  game_state_machine.cpp  game_state_machine.hpp  resource_manager.cpp  resource_manager.hpp  sprite.cpp  sprite.hpp  window.cpp  window.hpp
src/menu_states/: game_over.cpp  game_over.hpp
src/util/: cstring_view.hpp  dimension.hpp  finally.hpp  get_dir.cpp  get_dir.hpp  macros.hpp  not_null_ptr.hpp  project_info.cpp  project_info.hpp  real.hpp  rect.hpp  rng.cpp  rng.hpp  typedefs.hpp  vec2.hpp
